--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a{
 .coverpage{
     width: 100%;
     height: 350px;
-    background-image: url(..coverphoto.jpg);
+    background-image: url(../coverphoto.jpg);
     background-size: cover;
     background-position: center;   
 }
